<resources>
    <string name="app_name">MyShoppingApp</string>
    <string name="search">Search</string>
    <string name="quantity">Quantity :</string>
    <string name="price">Price :</string>
    <string name="name">Name :</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="make_order">Make Order</string>
    <string name="view_total_price">View Total Price</string>
    <string name="add_new_product">Add new Product</string>
    <string name="egp">EGP</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_name">Product Name :</string>
    <string name="quantity1">Quantity :</string>
    <string name="price1">Price :</string>
    <string name="name1">Name</string>
    <string name="categorie_name">Categorie Name</string>
    <string name="log_in">Log in</string>
    <string name="todo1">TODO</string>
    <string name="bar_char">bar char</string>
    <string name="catName">Name</string>
    <string name="category_name">Category name</string>
    <string name="add_category">add category</string>
    <string name="add_product">Add Product</string>
    <string name="product_nameEditBOX">Product name</string>
    <string name="categoryname">categoryName</string>
    <string name="title_activity_get_location">getLocation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_categories">Categories</string>
    <string name="user">user</string>
    <string name="date">date</string>
    <string name="all_time">all time</string>
    <string name="get_orders">get Orders</string>
    <string name="feedback">Feedback</string>
    <string name="Choose_image">Choose image</string>
    <string name="category">category</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="Number">Number</string>
    <string name="Card_Number">Card Number</string>
    <string name="ExpireDate">Expire Date</string>
    <string name="CVV">CVV</string>
    <string name="month">M</string>
    <string name="ExpireDateYear">Y</string>
    <string name="Description">Description</string>
</resources>
