<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ShowFeedBack">
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_image"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="45dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ProductImageDetails"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_image_200"
                    app:civ_border_color="@color/colorPrimary"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/product_name"
                    android:textSize="18sp"/>

            <EditText
                    android:id="@+id/editTextP_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:autofillHints=""
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/name1"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price (EGP)"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:textSize="18sp"/>

            <EditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:autofillHints=""
                    android:ems="10"
                    android:enabled="false"
                    android:hint="Price"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:textSize="18sp"/>

            <EditText
                    android:id="@+id/Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:autofillHints=""
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/Description"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/estimatedTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="FeedBacks"
                    android:textAlignment="center"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

        </RelativeLayout>
        <ListView
                android:id="@+id/FeedBack_listview"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>